# fastapi-project

./: .env  Dockerfile  alembic.ini  build.sh  docker-compose.yml  pyproject.toml
java_luchshe/: main.py  start.sh  users.py
java_luchshe/project/api/: auth_routes.py  depends.py  routes.py
java_luchshe/project/core/: config.py  exceptions.py
java_luchshe/project/infrastructure/postgres/: database.py  models.py
java_luchshe/project/infrastructure/postgres/repository/: additional_product_repo.py  bouquet_repo.py  compound_bouquet_repo.py  flower_repo.py  seller_repo.py  selling_repo.py  supply_repo.py  type_of_product_repo.py  user_repo.py
java_luchshe/project/resource/: auth.py
java_luchshe/project/schemas/: additional_products.py  auth.py  bouquets.py  compound_bouquet.py  flowers.py  sellers.py  selling.py  supply.py  type_of_product.py  type_of_products.py  users.py
migration/: env.py  script.py.mako
migration/versions/: 08fffa8e855a_initial.py  42b9ed310d6a_fixed_users_discount_type.py  4e4b6af75119_fixed_users_added_email_password.py  7a091d745537_fixed_users_added_role.py  d33c3bdbc50c_add_new_tables.py
