[tool.poetry]
name = "java-luchshe"
version = "0.1.0"
description = ""
authors = ["Angelina Stiukhina <a.stiukhina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
